# 04Printf

./: CMakeLists.txt  Makefile  main_test
Auxiliary_Files/: Anciennes versions de fonctions  Todo List  architecture des fichiers  cahier des charges
Includes/Auxiliary_Functions/: bonus.h  numbers_functions.h  numbers_functions_hexa.h  numbers_functions_octal.h  numbers_functions_unsigned.h  print_final_result_w_padding_and_conversion.h  print_pointer_address.h  strings_functions.h
Includes/Handlers/: handle_colors.h  handlers.h  test_conv_champs_prec.h
Includes/Print_Final_Result/: annex_functions.h
Includes/Print_Unicode/: Auxiliary_functions_for_unicode.h  auxiliary_functions_for_unicode.h  convert_dec_to_bin_utf8.h  print_unicode.h
Sources/: errors.c  main.c  printf.c
Sources/Auxiliary_Functions/: bonus.c  numbers_functions.c  numbers_functions_double.c  numbers_functions_hexa.c  numbers_functions_octal.c  numbers_functions_unsigned.c  print_final_result_w_padding_and_conversion.c  print_pointer_address.c  strings_functions.c
Sources/Handlers/: handle_colors.c  handle_conversions.c  handle_conversions_2.c  handlers.c  test_conv_champs_prec.c
Sources/Print_Final_Result/: annex_functions.c  compute_functions.c  print_and_compute_final_result.c
Sources/Print_Unicode/: Auxiliary_functions_for_unicode.c  auxiliary_functions_for_unicode.c  convert_dec_to_bin_utf8.c  create_and_print_t_bin_list.c  print_unicode.c  print_wchar_t.c  print_wchart_t.c
diff_tests/: diff_all_printf  diff_all_printf_aux  diff_champs_et_precision_printf  diff_champs_et_precision_printf_aux  diff_octal_printf  diff_pointeurs_printf_aux  diff_temp_printf_current  diff_temp_printf_former
